# cloud_adoption_tutorials

./: .gitignore  LICENSE  README.md
ami_meter/: README.md  plan_v1.md  plan_v1_1.md
ami_meter/analytics/: dr_baseline_5min.sql  feeder_health_summary.sql  voltage_anomaly.sql
ami_meter/architecture/: diagram.mmd
ami_meter/cloud_processing/: requirements.txt  setup.py  streaming_pipeline.py
ami_meter/edge_simulation/: config.yaml
ami_meter/infrastructure/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  tfplan
ami_meter/scripts/: 00_prereq.sh  10_deploy_tf.sh  30_launch_dataflow.sh  40_run_queries.sh
docs/: index.md
egrid_ai_agent/: README.md  egrid_rest_service.py  pyproject.toml  run_egrid_agent.py
egrid_ai_agent/egrid_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
egrid_mcp_agent/: README.md  egrid_mcp_server.py  pyproject.toml  run_egrid_agent_mcp_client.py
egrid_mcp_agent/egrid_mcp_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
elastic_simulation_cluster/: README.md  aws_parallel_cluster_setup.txt  cluster-config-template.yaml  on-node-configured.sh  pcluster_creator_iaminlinepolicy_advuser.json  pcluster_creator_iaminlinepolicy_baseuser.json
managing_ders_at_scale/: README.md  ab_poc_main.ts  cdk.json  cleanup_iotstack.sh  package.json
managing_ders_at_scale/stacks/: create_iot_sim_stack_v3.ts  create_storage_stack.ts
managing_ders_at_scale/user-data/: DER.json  DER2.json  der_class.py  (+10 more)
smart_meter_analytics/: README.md
three_phase_distribution_power_flow_solver/: README.MD
(+32 files in other folders)
