[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egrid_mcp_agent"
dynamic = ["version"]
description = "This is an MCP agent example for power system analysis with open-source tool GridCal and OpenDSS"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "hinfsynz", email = "szhang.asu@gmail.com"},
]
dependencies = [
    "requests",
    "botocore",
    "termcolor",
    "InlineAgent",
]

#[tool.setuptools]
#packages = ["egrid_mcp_agent"]

[project.urls]
Repository = "https://github.com/IEEE-PES-TF-Cloud4PowerGrid/cloud_adoption_tutorials"

[project.scripts]
agent = "run_egrid_agent_mcp_client:main"

